Update EmailJS script source to latest version

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   </footer>
 
   <!-- Load EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3.2.0/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
   <!-- Custom JavaScript -->
   <script src="script.js"></script>
